--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -35,8 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/furniture_Sales_Management
 endorsed.classpath=
 excludes=
-file.reference.gson-2.10.1.jar=src/gson-2.10.1.jar
-file.reference.jcalendar-1.4.jar=src/jcalendar-1.4.jar
+file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -117,4 +117,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
+src.lib.dir=lib
 test.src.dir=test
