--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,22 @@
 *.tar.gz
 *.rar
 
+test.java
+#workspace config
+.DS_Store
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
 /furniture_Sales_Management/nbproject/private/
+/furniture_Sales_Management/build/
+/testMavenApp
+/furniture_Sales_Management/dist/
+
+
+# include libraries
+!/furniture_Sales_Management/lib/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+!/furniture_Sales_Management/lib/gson-2.10.1/gson-2.10.1-javadoc.jar
+!/furniture_Sales_Management/lib/gson-2.10.1/gson-2.10.1-sources.jar
+!/furniture_Sales_Management/lib/gson-2.10.1/gson-2.10.1.jar
+!/furniture_Sales_Management/lib/jcalendar-1.4/jcalendar-1.4.jar
