--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -36,9 +36,6 @@ dist.jlink.output=${dist.jlink.dir}/furniture_Sales_Management
 endorsed.classpath=
 excludes=
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
-file.reference.javax.activation-1.1.0.v201105071233.jar=lib/javaxActivation/javax.activation-1.1.0.v201105071233.jar
-file.reference.javax.mail.jar=lib/javaxMail/javax.mail.jar
-file.reference.jbcrypt.jar=lib/jbcrypt/jbcrypt.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -46,10 +43,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.javax.activation-1.1.0.v201105071233.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.jbcrypt.jar}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
