added new library added email library for optional email function

--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/furniture_Sales_Management
 endorsed.classpath=
 excludes=
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
+file.reference.javax.mail.jar=lib/javaxMail/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -44,7 +45,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.CopyLibs.classpath}
+    ${libs.CopyLibs.classpath}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
