-fix: added static processes for list persistence in sublist and furniture during init

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ replay_pid*
 !/furniture_Sales_Management/lib/gson-2.10.1/gson-2.10.1-sources.jar
 !/furniture_Sales_Management/lib/gson-2.10.1/gson-2.10.1.jar
 !/furniture_Sales_Management/lib/jcalendar-1.4/jcalendar-1.4.jar
+/furniture_Sales_Management/src/furniture_sales_management/testGUI.form
+/furniture_Sales_Management/src/furniture_sales_management/testGUI.java
