--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=furniture_Sales_Management
 application.vendor=damonng
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -36,6 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/furniture_Sales_Management
 endorsed.classpath=
 excludes=
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
+file.reference.itextpdf-5.5.7.jar=lib/itextpdf/itextpdf-5.5.7.jar
 file.reference.javax.mail.jar=lib/javaxMail/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
@@ -47,7 +49,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.CopyLibs.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.itextpdf-5.5.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
