--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -36,8 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/furniture_Sales_Management
 endorsed.classpath=
 excludes=
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
-file.reference.itextpdf-5.5.7.jar=lib\\itextpdf-5.5.7.jar
-file.reference.javax.mail.jar=lib/javaxMail/javax.mail.jar
+file.reference.itextpdf-5.5.7.jar=lib/itextpdf/itextpdf-5.5.7.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -48,7 +47,6 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.CopyLibs.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.javax.mail.jar}:\
     ${file.reference.itextpdf-5.5.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
