--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -36,8 +36,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/furniture_Sales_Management
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=lib/commons-beanutils-1.9.4/commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.jar=lib/commons-collections-3.2/commons-collections-3.2.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1/commons-digester-2.1.jar
+file.reference.commons-logging-1.3.0.jar=lib/commons-logging-1.3.0/commons-logging-1.3.0.jar
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
 file.reference.itextpdf-5.5.7.jar=lib/itextpdf/itextpdf-5.5.7.jar
+file.reference.jasperreports-6.4.0.jar=lib/jasperReports-6.4/jasperreports-6.4.0.jar
 file.reference.javax.mail.jar=lib/javaxMail/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
@@ -50,7 +55,12 @@ javac.classpath=\
     ${libs.CopyLibs.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.itextpdf-5.5.7.jar}
+    ${file.reference.itextpdf-5.5.7.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.3.0.jar}:\
+    ${file.reference.jasperreports-6.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
