--- a/furniture_Sales_Management/nbproject/project.properties
+++ b/furniture_Sales_Management/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.commons-logging-1.3.0.jar=lib/commons-logging-1.3.0/commons-loggi
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1/gson-2.10.1.jar
 file.reference.itextpdf-5.5.7.jar=lib/itextpdf/itextpdf-5.5.7.jar
 file.reference.jasperreports-6.4.0.jar=lib/jasperReports-6.4/jasperreports-6.4.0.jar
+file.reference.javax.activation-1.1.0.v201105071233.jar=lib/javaxActivation/javax.activation-1.1.0.v201105071233.jar
 file.reference.javax.mail.jar=lib/javaxMail/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4/jcalendar-1.4.jar
 includes=**
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.commons-collections-3.2.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.3.0.jar}:\
-    ${file.reference.jasperreports-6.4.0.jar}
+    ${file.reference.jasperreports-6.4.0.jar}:\
+    ${file.reference.javax.activation-1.1.0.v201105071233.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
